🤖 CI: Move changelog parsing to release build
We need the changelog to be updated before we run the release job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,6 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     uses: ./.github/workflows/tests.yml
 
-  changelog:
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
-    uses: ./.github/workflows/changelog.yml
-
   release:
     runs-on: ubuntu-latest
     needs: [ tests, changelog ]
@@ -57,6 +53,34 @@ jobs:
           then
             echo "BUILD_VERSION=$PACKAGE_VERSION.${{ github.run_number}}-snapshot" >> $GITHUB_ENV
           fi
+
+      - name: Check changelog for this version
+        if: env.SNAPSHOT == 'false'
+        id: changelog_check
+        run: |
+          if grep -q "${{ env.EXTENSION_VERSION }}" CHANGELOG.md;then
+            echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
+          else
+            echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Update changelog [unreleased] with latest version
+        if: env.SNAPSHOT == 'false'
+        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
+        if: "steps.changelog_check.outputs.HAS_VERSION == 'false' && !env.SNAPSHOT"
+        with:
+          changelogPath: ./CHANGELOG.md
+          tag: ${{ env.EXTENSION_VERSION }}
+
+      - name: Commit Changelog
+        if: env.SNAPSHOT == 'false'
+        uses: EndBug/add-and-commit@v9.1.1
+        if: "steps.changelog_check.outputs.HAS_VERSION == 'false' && !env.SNAPSHOT"
+        with:
+          author_name: Github Actions
+          author_email: info@ortussolutions.com
+          message: '📖 DOC: Finalized changelog for v${{ env.EXTENSION_VERSION }} - [ci skip]'
+          add: CHANGELOG.md
 
       - name: Set temporary (snapshot) version in pom.xml
         if: env.SNAPSHOT == 'true'
