--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [ tests, changelog ]
+    needs: [ tests ]
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - uses: actions/checkout@v3
