--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,14 +69,14 @@ jobs:
 
       - name: Update changelog [unreleased] with latest version
         uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-        if: "steps.changelog_check.outputs.HAS_VERSION == 'false' && !env.SNAPSHOT"
+        if: "steps.changelog_check.outputs.HAS_VERSION == 'false' && env.SNAPSHOT == 'false'"
         with:
           changelogPath: ./CHANGELOG.md
           tag: ${{ env.EXTENSION_VERSION }}
 
       - name: Commit Changelog
         uses: EndBug/add-and-commit@v9.1.1
-        if: "steps.changelog_check.outputs.HAS_VERSION == 'false' && !env.SNAPSHOT"
+        if: "steps.changelog_check.outputs.HAS_VERSION == 'false' && env.SNAPSHOT == 'false'"
         with:
           author_name: Github Actions
           author_email: info@ortussolutions.com
