--- a/.github/workflows/main-5.4.yml
+++ b/.github/workflows/main-5.4.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-ant
 
-name: Java CI
+name: Java CI - Lucee 5.4
 
 on: [push, pull_request,workflow_dispatch]
 
@@ -10,7 +10,8 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      luceeVersionQuery: 0/all/light
+      luceeVersionQuery: 5.4/all/light
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -18,6 +19,12 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Set up MySQL (local)
+      run: |
+        sudo systemctl start mysql
+        mysql -e 'CREATE DATABASE lucee' -uroot -proot
+        mysql -e 'CREATE USER "lucee"@"localhost" IDENTIFIED WITH mysql_native_password BY "lucee";' -uroot -proot
+        mysql -e 'GRANT ALL PRIVILEGES ON lucee.* TO "lucee"@"localhost"' -uroot -proot
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
@@ -26,7 +33,7 @@ jobs:
     - name: Cache Lucee files
       uses: actions/cache@v3
       with:
-        path: _actions/zspitzer/lucee-script-engine-runner/main/lucee-download-cache
+        path: _actions/lucee/script-runner/main/lucee-download-cache
         key: lucee-downloads-${{ env.luceeVersion }}
         restore-keys: |
           lucee-downloads
@@ -42,19 +49,26 @@ jobs:
       with:
         repository: lucee/lucee
         path: lucee
-    - name: Run Lucee Test Suite, testLabels="orm"
+    - name: Run Lucee Test Suite (testFilter="orm")
       uses: lucee/script-runner@main
       with:
         webroot: ${{ github.workspace }}/lucee/test
         execute: /bootstrap-tests.cfm
         luceeVersion: ${{ env.luceeVersion }}
         extensionDir: ${{ github.workspace }}/dist
+        extensions:
       env:
         testLabels: orm
         testAdditional: ${{ github.workspace }}/tests
+        MYSQL_SERVER: localhost
+        MYSQL_USERNAME: lucee
+        MYSQL_PASSWORD: lucee
+        MYSQL_PORT: 3306
+        MYSQL_DATABASE: lucee
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
       with:
         files: ${{ github.workspace }}/lucee/test/reports/junit-test-results.xml
         check_name: "Test Results"
+
