--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,19 @@
         ]
     },
     "java.format.enabled": true,
-    "java.format.settings.url": "extension/ortus-java-style.xml"
+    "java.format.settings.url": "extension/ortus-java-style.xml",
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "java.dependency.packagePresentation": "hierarchical",
+    "java.compile.nullAnalysis.mode": "automatic",
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.dependency.syncWithFolderExplorer": true,
+    "[java]": {
+        "editor.formatOnSave": true,
+        "editor.insertSpaces": false,
+        "editor.tabSize": 4
+    },
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "explicit"
+    }
 }
