copy/paste mistake

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,7 +110,7 @@ jobs:
           luceeVersionQuery: ${{ matrix.lucee.query }}
           extensionDir: ${{ github.workspace }}/target
         env:
-          testLabels: s3
+          testLabels: hibernate
           testAdditional: ${{ github.workspace }}/tests
 
   deploy:
