--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,12 +64,10 @@ jobs:
       MYSQL_PASSWORD: lucee
       MYSQL_PORT: 3306
       MYSQL_DATABASE: lucee
+      LUCEE_VERSIONS: ${{ vars.LUCEE_VERSIONS }}
     strategy:
       matrix:
-        lucee: 
-          - { version: 'light-5.4.6.9', query: '5/all/light' }
-          - { version: 'light-6.0.3.1', query: '6.0/all/light' }
-          - { version: 'light-6.1.0.206-SNAPSHOT', query: '6.1/all/light' }
+        lucee: ${{ fromJSON(vars.LUCEE_VERSIONS) }}
     services:
       minio:
         image: fclairamb/minio-github-actions
