--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.lucee</groupId>
     <artifactId>hibernate-extension</artifactId>
-    <version>3.5.5.89</version>
+    <version>3.5.6.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Hibernate Extension</name>
 
